added bootstrap and slight customisation

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,14 +4,16 @@ $def with (page)
 <html lang="en">
 <head>
     <title>20 Questions</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="/static/style.css" />
+    <meta charset="utf-8"/>
     <script src="/static/jquery-1.4.2.min.js"></script>
     <script src="/static/jquery.shortkeys.js"></script>
     <script src="/static/answer_actions.js"></script>
     <script src="/static/learn_actions.js"></script>
+    <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css" type="text/css">
+    <link re="stylesheet" href="/static/style.css" type="text/css">
 </head>
-<body>
+<body class="container body">
 $:page
 </body>
 </html>
