--- a/templates/index.html
+++ b/templates/index.html
@@ -4,31 +4,31 @@ $def with (question, count, nearby_objects_values)
 $if question == 'begin':
     <header>
         <hgroup>
-            <h1>Welcome to 20 Questions!</h1>
+            <h1 class="h1" style="font-weight:bold;">Welcome to 20 Questions!</h1>
         </hgroup>
     </header>
-    <h1>Think of a person (real or fictional)...</h1>
+    <h1 class="h1">Think of a person (real or fictional)...</h1>
     <br />
     <form action="/begin" method="post">
-        <input type="submit" value="Begin!">
+        <input class="btn btn-success" type="submit" value="Begin!">
     </form>
 $elif question:
-    <p><span id="count">$count.</span> $question.text</p>
-    <form action="/answer/$question.id" method="post" id="answer_form">
-        <input type="button" name="yes" value="yes">
-        <input type="button" name="unsure" value="unsure">
-        <input type="button" name="no" value="no">
+    <p class="h2"><span id="count">$count.</span> $question.text</p>
+    <form class="" action="/answer/$question.id" method="post" id="answer_form">
+        <input type="button" class="btn btn-success" name="yes" value="yes">
+        <input type="button" class="btn btn-primary" name="unsure" value="unsure">
+        <input type="button" class="btn btn-danger" name="no" value="no">
         <input type="hidden" name="answer">
     </form>
     <br />
     <form action="/restart" method="post">
-        <input type="submit" value="restart">
+        <input type="submit" class="btn btn-warning" value="restart">
     </form>
 
 $if nearby_objects_values:
-    <h2>Considering...</h2>
+    <h2 class="h2">Considering...</h2>
     $for i in range(len(nearby_objects_values)):
         $ value = nearby_objects_values[i][0]
         $ object = nearby_objects_values[i][1]
         $if object and value > 0:
-            <p>$object.name = $value</p>
+            <p class="h4 form">$object.name = $value</p>
